--- a/index.html
+++ b/index.html
@@ -69,13 +69,15 @@ function handleBotLogic(msg) {
   }
 
   if (lower.includes("onboarding") || lower.includes("new employee")) {
-    showBotMessage("To onboard a new employee:\n1. Provide access to the internal HR portal.\n2. Share the onboarding checklist.\n3. Assign a mentor or team lead.\nNeed help accessing templates?");
-  } else if (lower.includes("it support") || lower.includes("password") || lower.includes("login")) {
-    showBotMessage("For IT support:\n1. Visit the IT Helpdesk portal.\n2. Use your business credentials to log in.\n3. Submit a support ticket for password resets or tech issues.");
-  } else if (lower.includes("hr policy") || lower.includes("time off") || lower.includes("leave")) {
-    showBotMessage("To check HR policies or request time off:\n1. Login to the HR portal.\n2. Navigate to 'Leave Management'.\n3. Follow the steps to submit your request.");
-  } else if (lower.includes("automation") || lower.includes("tools")) {
-    showBotMessage("Many small businesses use automation tools like chatbots, email responders, and task schedulers to improve efficiency. Would you like suggestions?");
+    showBotMessage("To onboard a new employee:\n1. Provide access to the internal HR portal.\n2. Share the onboarding checklist.\n3. Assign a mentor or team lead.\nWould you like a sample checklist?");
+  } else if (lower.includes("forgot") || lower.includes("password") || lower.includes("login")) {
+    showBotMessage("If you’ve forgotten your login credentials:\n1. Click 'Forgot Password' on the login page.\n2. Follow the prompts for recovery.\n3. Contact IT support if needed.");
+  } else if (lower.includes("time off") || lower.includes("leave") || lower.includes("hr policy")) {
+    showBotMessage("You can review the time-off policy here:\n📄 [View Time-Off Policy](#)\nLet me know if you’d like help submitting a time-off request.");
+  } else if (lower.includes("automation") || lower.includes("tools") || lower.includes("workflow") || lower.includes("suggest")) {
+    showBotMessage("Here are some tools used for workflow automation:\n- Zapier\n- Trello + Butler\n- Microsoft Power Automate\nWould you like help picking the right one based on your needs?");
+  } else if (lower.includes("email automation") || lower.includes("crm sync") || lower.includes("project management")) {
+    showBotMessage("Great! Please specify your top priority so I can suggest the right tool:\n✅ Email Automation\n✅ CRM Sync\n✅ Project Management");
   } else if (lower.includes("agent") || lower.includes("human")) {
     showBotMessage("Connecting you to a representative... ⏳");
     setTimeout(() => {
